Thu Feb 21 09:33:00 2002                            Ted Zlatanov (tzz)

Applied patch from Tomohiro KUBOTA <tkubota@riken.go.jp> to use auto
locale encodings.  This is not too useful right now, but with the next
Eterm release it will be.  I couldn't test thoroughly since I don't
have multiple locales on my system, but what I did test looked fine.

I also fixed a CONFIG_BUFF constant missing from options.h
----------------------------------------------------------------------
Thu Feb 21 19:06:18 2002                        Michael Jennings (mej)

I think Ted made the right call for the wrong reason.  I'm adding the
fallback value for CONFIG_BUFF so that people using the older libast
will be able to use 0.9.2.  I'd like to get 0.9.2 out the door soon,
but libast 0.5 is far from ready. :-)
----------------------------------------------------------------------
Mon Feb 25 23:10:59 2002                        Michael Jennings (mej)

Fixed a warning that got missed before.  Also removed the colour
scheme that no one liked.  I left it in the Eterm theme, though...just
commented it out.  I also put back the old font lines and commented
those out too.  The Eterm theme config file is intended as a teaching
tool as well as a theme config. :)
----------------------------------------------------------------------
Tue Feb 26 10:01:41 2002                        Michael Jennings (mej)

Fixed the default fg color and color 7.
----------------------------------------------------------------------
Sun Apr  7 21:15:09 2002                        Michael Jennings (mej)

Be even more anal when dumping a buffer to a file....
----------------------------------------------------------------------
Mon Apr  8 15:29:27 2002                        Michael Jennings (mej)

Fixed a bug spotted by Laurence J. Lane <ljlane@debian.org> with color
settings not being properly saved.
----------------------------------------------------------------------